# Nivvi

./: .gitignore  README.md  marketing.py  product.py  pyproject.toml
docs/: business_process_flow.md  closed_beta_ops.md  landing_deploy.md  nivvi_system_spec.md  positioning.md  preseed_investor_deck.md  security_policies.md
migrations/: README.md  env.py
migrations/versions/: 0001_store_snapshots.py  0002_execution_audit_relational.py  0003_core_household_relational.py
nivvi/: __init__.py  main.py  marketing_main.py
nivvi/api/: __init__.py  schemas.py  serializers.py
nivvi/domain/: __init__.py  models.py
nivvi/services/: __init__.py  action_service.py  audit_service.py  auth_service.py  chat_service.py  dashboard_service.py  forecast_service.py  household_service.py  policy_service.py  provider_service.py  timeline_service.py  utils.py  waitlist_service.py  webhook_service.py
nivvi/storage/: __init__.py  in_memory.py  relational_persistence.py  snapshot_persistence.py
nivvi/workflows/: __init__.py  orchestrator.py  runtime.py
tests/: test_agent_runtime_chat.py  test_api_contract.py  test_core_flows.py  test_landing_waitlist.py  test_marketing_split.py  test_mvp_foundation.py  test_webhooks.py
web/: app.js  index.html  styles.css
