[project]
name = "nivvi"
version = "0.1.0"
description = "Nivvi Agentic Personal Finance OS backend + companion UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.31.0",
  "pydantic>=2.9.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
